# grafana-apprise-adapter

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
src/: apprise.rs  grafana.rs  main.rs  state.rs  utils.rs
src/routes/: health.rs  mod.rs  notify.rs
