[package]
name = "grafana-apprise-adapter"
version = "0.1.0"
authors = ["Jake Howard <git@theorangeone.net>"]
edition = "2018"
repository = "https://github.com/RealOrangeOne/date-group"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
actix-web = "3"
env_logger = "0.7.1"
serde = "1.0.116"
reqwest = { version = "0.10.8", features = ["json"] }
url = "2.1.1"
log = "0.4.11"
