[package]
name = "grafana-apprise-adapter"
version = "0.1.0"
authors = ["Jake Howard <git@theorangeone.net>"]
edition = "2018"
repository = "https://github.com/RealOrangeOne/grafana-apprise-adapter"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
actix-web = "3"
env_logger = "0.8.2"
serde = "1.0"
url = "2.2.0"
log = "0.4.13"
actix-rt = "1.1.1"
